idea/testData/multiplatform/sealedInheritorsInComplexModuleStructure/main/main.kt
package foo

actual sealed class SealedWithPlatformActuals <!ACTUAL_WITHOUT_EXPECT!>actual constructor()<!>: SealedWithSharedActual()
